# agenticstarter

./: .gitignore  .linear_project.json  README.md  agenticstarter.py  app_spec.txt  init.sh  pyproject.toml
agenticstarter/: __init__.py  cli.py  deployment_instructions.md  landing_page_template.py  mcp_server.py  project_template.py
tests/: __init__.py  conftest.py  test_cli.py  test_landing_page.py  test_mcp_server.py  test_project_scaffold.py  test_project_template.py
