[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticstarter"
version = "0.1.0"
description = "A starter kit for creating micro-SaaS products from agentic tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
agenticstarter = "agenticstarter:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["agenticstarter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
